--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,6 +10,8 @@
     "start": "vite preview"
   },
   "dependencies": {
+    "@rolldown/pluginutils": "^1.0.0-beta.27",
+    "esbuild": "^0.25.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
