--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -11,6 +11,7 @@
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "scheduler": "^0.23.2",
     "styled-jsx": "^5.1.1"
   },
   "devDependencies": {
